src/test/deca/context/valid/created/miscellaneous/while.deca
// Description :
//		test sur le while
//
// Resultats :
//		Ok


{
boolean a;
while (a){
}
}