src/test/deca/context/invalid/created/this/this_dans_main_met.deca
// Description :
//		un this dans un main (version acces metode)
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 : (3.43) 'this' ne peut être utilisé dans le main

{
this.a();
}